# sudoq-ui

./: .gitignore
.github/workflows/: ci.yml
backend/: pyproject.toml  requirements.txt  sudoq-ui.db
backend/app/: config.py  database.py  main.py
backend/app/api/: main.py
backend/app/api/routes/: boards.py  items.py  login.py  users.py  utils.py
backend/app/boards/: models.py  routes.py  schemas.py  service.py
backend/app/core/: sudoku.py
backend/app/db/: __init__.py  models.py
backend/app/schemas/: __init__.py
backend/app/services/: board_service.py  user_service.py
backend/app/sudoku/: __init__.py  core.py  models.py  routes.py  schemas.py  service.py
backend/app/users/: models.py  routes.py  schemas.py  service.py
backend/public/: index.html
backend/public/assets/: index-Cu6IiDh1.css  index-D6DZ3cuW.js
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
frontend/src/: App.css  App.tsx  ThemeContext.tsx  UserContext.tsx  index.css
frontend/src/api/: service.ts  types.ts
frontend/src/api/services/: api.ts
frontend/src/components/: GameScreen.tsx  HamburgerButton.css  HamburgerButton.tsx  Hint.tsx  HintModal.tsx  Layout.css  Layout.tsx  PuzzleHeader.tsx  Sidebar.css  Sidebar.tsx  StatsPane.tsx  SudokuCell.css  SudokuCell.tsx  SudokuGrid.css  SudokuGrid.tsx  ThemeToggle.tsx  WinningScreen.tsx
frontend/src/contexts/: GameSettingsContext.tsx  UserContext.tsx
frontend/src/pages/: Boards.css  Boards.tsx  Home.tsx  Singleplayer.css  Singleplayer.tsx
